--- a/Simple_EPT_Example.ipynb
+++ b/Simple_EPT_Example.ipynb
@@ -23,7 +23,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0b868755-4a9d-41e1-def9-68e5a9612d21"
+        "outputId": "8d796b48-c93a-4232-ac1b-8f3afdb833f2"
       },
       "source": [
         "# A script demonstrating measurement and analysis of Energy Proxy Traits..\n",
@@ -41,92 +41,92 @@
         "!pip install plotnine\n",
         "!pip install zenodo-get"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: scikit-image in /usr/local/lib/python3.7/dist-packages (0.16.2)\n",
-            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image) (2.5)\n",
             "Requirement already satisfied: pillow>=4.3.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image) (7.1.2)\n",
-            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image) (1.4.1)\n",
             "Requirement already satisfied: PyWavelets>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image) (1.1.1)\n",
+            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image) (2.5)\n",
             "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image) (2.4.1)\n",
+            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image) (1.4.1)\n",
             "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image) (3.2.2)\n",
+            "Requirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.7/dist-packages (from PyWavelets>=0.4.0->scikit-image) (1.19.5)\n",
             "Requirement already satisfied: decorator>=4.3.0 in /usr/local/lib/python3.7/dist-packages (from networkx>=2.0->scikit-image) (4.4.2)\n",
-            "Requirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.7/dist-packages (from scipy>=0.19.0->scikit-image) (1.19.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.8.1)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.4.7)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.3.1)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (0.10.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.15.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.8.1)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image) (2.4.7)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from cycler>=0.10->matplotlib!=3.0.0,>=2.0.0->scikit-image) (1.15.0)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (1.19.5)\n",
             "Collecting vuba\n",
             "  Downloading https://files.pythonhosted.org/packages/50/18/d9d581754562f92256cecf5b52c57db594cba518c82a6faf7dabcb8b1a4f/vuba-0.2.8-py3-none-any.whl\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from vuba) (1.19.5)\n",
-            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.7/dist-packages (from vuba) (4.1.2.30)\n",
             "Requirement already satisfied: more-itertools in /usr/local/lib/python3.7/dist-packages (from vuba) (8.7.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from vuba) (1.19.5)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from vuba) (4.41.1)\n",
-            "Requirement already satisfied: natsort in /usr/local/lib/python3.7/dist-packages (from vuba) (5.5.0)\n",
+            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.7/dist-packages (from vuba) (4.1.2.30)\n",
             "Collecting dataclasses\n",
             "  Downloading https://files.pythonhosted.org/packages/26/2f/1095cdc2868052dd1e64520f7c0d5c8c550ad297e944e641dbf1ffbb9a5d/dataclasses-0.6-py3-none-any.whl\n",
+            "Requirement already satisfied: natsort in /usr/local/lib/python3.7/dist-packages (from vuba) (5.5.0)\n",
             "Installing collected packages: dataclasses, vuba\n",
             "Successfully installed dataclasses-0.6 vuba-0.2.8\n",
             "Collecting wget\n",
             "  Downloading https://files.pythonhosted.org/packages/47/6a/62e288da7bcda82b935ff0c6cfe542970f04e29c756b0e147251b2fb251f/wget-3.2.zip\n",
             "Building wheels for collected packages: wget\n",
             "  Building wheel for wget (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for wget: filename=wget-3.2-cp37-none-any.whl size=9681 sha256=44d413cffc43a25cca54ba7f77ebc3a563f72212c164cc490f589892d23871f0\n",
+            "  Created wheel for wget: filename=wget-3.2-cp37-none-any.whl size=9681 sha256=97ce53688fb1b3b860c9390bc851b83ffaeb5ecfcb4ebc04758ee4f0847d5105\n",
             "  Stored in directory: /root/.cache/pip/wheels/40/15/30/7d8f7cea2902b4db79e3fea550d7d7b85ecb27ef992b618f3f\n",
             "Successfully built wget\n",
             "Installing collected packages: wget\n",
             "Successfully installed wget-3.2\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (3.2.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.1)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
             "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib) (1.15.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
             "Requirement already satisfied: opencv-python in /usr/local/lib/python3.7/dist-packages (4.1.2.30)\n",
             "Requirement already satisfied: numpy>=1.14.5 in /usr/local/lib/python3.7/dist-packages (from opencv-python) (1.19.5)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (4.41.1)\n",
             "Collecting tsne\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4c/ea/f4deb02eb49bbc7006624398d3909bbb43cd93efd58e66b74320b5530edd/tsne-0.3.1.tar.gz (547kB)\n",
-            "\u001b[K     |████████████████████████████████| 552kB 7.7MB/s \n",
+            "\u001b[K     |████████████████████████████████| 552kB 5.4MB/s \n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
-            "Requirement already satisfied: scipy>=0.12.0 in /usr/local/lib/python3.7/dist-packages (from tsne) (1.4.1)\n",
             "Requirement already satisfied: numpy>=1.7.1 in /usr/local/lib/python3.7/dist-packages (from tsne) (1.19.5)\n",
+            "Requirement already satisfied: scipy>=0.12.0 in /usr/local/lib/python3.7/dist-packages (from tsne) (1.4.1)\n",
             "Requirement already satisfied: cython>=0.19.1 in /usr/local/lib/python3.7/dist-packages (from tsne) (0.29.22)\n",
             "Building wheels for collected packages: tsne\n",
             "  Building wheel for tsne (PEP 517) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for tsne: filename=tsne-0.3.1-cp37-cp37m-linux_x86_64.whl size=260486 sha256=990ad73352e84c79968a71c1c9b4a7c6d2b87a768da76c6879dabcc47e482af5\n",
+            "  Created wheel for tsne: filename=tsne-0.3.1-cp37-cp37m-linux_x86_64.whl size=260504 sha256=9a7f9a81f21f220b1e4b9adc20f5192babafb84bf53ae2043b6c3624f5ea1463\n",
             "  Stored in directory: /root/.cache/pip/wheels/3e/d6/fc/58392f18ea8fc4c74e20185d2faeee87a1c1924a182606c6cd\n",
             "Successfully built tsne\n",
             "Installing collected packages: tsne\n",
             "Successfully installed tsne-0.3.1\n",
             "Requirement already satisfied: plotnine in /usr/local/lib/python3.7/dist-packages (0.6.0)\n",
-            "Requirement already satisfied: matplotlib>=3.1.1 in /usr/local/lib/python3.7/dist-packages (from plotnine) (3.2.2)\n",
+            "Requirement already satisfied: pandas>=0.25.0 in /usr/local/lib/python3.7/dist-packages (from plotnine) (1.1.5)\n",
+            "Requirement already satisfied: statsmodels>=0.9.0 in /usr/local/lib/python3.7/dist-packages (from plotnine) (0.10.2)\n",
             "Requirement already satisfied: scipy>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from plotnine) (1.4.1)\n",
             "Requirement already satisfied: descartes>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from plotnine) (1.1.0)\n",
-            "Requirement already satisfied: statsmodels>=0.9.0 in /usr/local/lib/python3.7/dist-packages (from plotnine) (0.10.2)\n",
-            "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.7/dist-packages (from plotnine) (1.19.5)\n",
-            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from plotnine) (0.5.1)\n",
             "Requirement already satisfied: mizani>=0.6.0 in /usr/local/lib/python3.7/dist-packages (from plotnine) (0.6.0)\n",
-            "Requirement already satisfied: pandas>=0.25.0 in /usr/local/lib/python3.7/dist-packages (from plotnine) (1.1.5)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=3.1.1->plotnine) (2.4.7)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=3.1.1->plotnine) (2.8.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=3.1.1->plotnine) (0.10.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=3.1.1->plotnine) (1.3.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from patsy>=0.4.1->plotnine) (1.15.0)\n",
-            "Requirement already satisfied: palettable in /usr/local/lib/python3.7/dist-packages (from mizani>=0.6.0->plotnine) (3.3.0)\n",
+            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from plotnine) (0.5.1)\n",
+            "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.7/dist-packages (from plotnine) (1.19.5)\n",
+            "Requirement already satisfied: matplotlib>=3.1.1 in /usr/local/lib/python3.7/dist-packages (from plotnine) (3.2.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.25.0->plotnine) (2.8.1)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.25.0->plotnine) (2018.9)\n",
+            "Requirement already satisfied: palettable in /usr/local/lib/python3.7/dist-packages (from mizani>=0.6.0->plotnine) (3.3.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from patsy>=0.4.1->plotnine) (1.15.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=3.1.1->plotnine) (1.3.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=3.1.1->plotnine) (0.10.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=3.1.1->plotnine) (2.4.7)\n",
             "Collecting zenodo-get\n",
             "  Downloading https://files.pythonhosted.org/packages/b1/93/7bb7fff9ee485dcd3fa679984c5cb06147fcc567930a3b3549d8053a2fe8/zenodo_get-1.3.2-py2.py3-none-any.whl\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from zenodo-get) (2.23.0)\n",
             "Requirement already satisfied: wget in /usr/local/lib/python3.7/dist-packages (from zenodo-get) (3.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from zenodo-get) (2.23.0)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->zenodo-get) (2020.12.5)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->zenodo-get) (2.10)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->zenodo-get) (3.0.4)\n",
@@ -311,12 +311,6 @@
         "    fig.text(0.04, 0.5, 'Energy', va='center', rotation='vertical')\n",
         "    plt.show()\n",
         "\n",
-        "def download_zenodo_videos(path = False, num = 'all'):\n",
-        "    print('Downloading ')\n",
-        "    if not path:\n",
-        "        !zenodo_get 10.5281/zenodo.4645805\n",
-        "    #else:\n",
-        "\n",
         "def download_zenodo_video(path = False):\n",
         "    if not path:\n",
         "        print('Downloading...')\n",
@@ -325,51 +319,9 @@
         "    else:\n",
         "        print('Downloading...')\n",
         "        vid = wget.download(path)\n",
-        "        print('Download complete')\n",
-        "\n",
-        "def batch_analysis(vids):\n",
-        "    # Remove if not wanting to run this example\n",
-        "    vids = vids\n",
-        "    results = dict()\n",
-        "    temp = []\n",
-        "    time = []\n",
-        "    for v in range(len(vids)):\n",
-        "        print('Analysing: ', vids[v].split('.')[0])\n",
-        "        results[vids[v].split('.')[0]] = calculate_epts(vids[v], 30, 8)\n",
-        "        temp.append(vids[v].split('_')[0].split('C')[0])\n",
-        "        time.append(vids[v].split('_')[2].split('d')[0])\n",
-        "    # Integrate EPT data..\n",
-        "    keys = list(results.keys())\n",
-        "    out = np.zeros((len(vids), 301))\n",
-        "    for k in range(len(keys)):\n",
-        "        out[k, :] = np.mean(results[keys[k]][:, :, 1, :], axis=(0, 1))\n",
-        "    return out, temp, time\n",
-        "\n",
-        "def dimensionality_reduction(out, temp, time):\n",
-        "    scaler = StandardScaler()\n",
-        "    # scaler.fit(out)\n",
-        "    out = scaler.fit_transform(np.log(out + 1))\n",
-        "\n",
-        "    # define min max scaler\n",
-        "    scaler = MinMaxScaler()\n",
-        "    # transform data\n",
-        "    scaled = scaler.fit_transform(np.log(out + 1))\n",
-        "\n",
-        "    # Run PCA and uMap\n",
-        "    pca = PCA(n_components=100).fit_transform(scaled.reshape(scaled.shape[0], 301))\n",
-        "    dim_reduced = TSNE(n_components=3).fit_transform(pca)\n",
-        "\n",
-        "    dim_reduced = pd.DataFrame(dim_reduced)\n",
-        "    dim_reduced['Temperature'] = temp\n",
-        "    dim_reduced['DevStage'] = time\n",
-        "    dim_reduced.columns = ['one', 'two', 'three', 'Temperature', 'DevStage']\n",
-        "\n",
-        "    (ggplot(out, aes('one', 'two', color='factor(DevStage)'))\n",
-        "     + geom_point(aes(size='three'), alpha=0.7)\n",
-        "     + facet_grid('Temperature ~ .')\n",
-        "     )\n"
+        "        print('Download complete')\n"
       ],
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -380,7 +332,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 659
         },
-        "outputId": "b5c0bc7a-3d70-4f2d-a973-539dea2b5c44"
+        "outputId": "69dfa42d-de61-4cb0-c2f2-6095ddec9f88"
       },
       "source": [
         "## Single video EPT example..\n",
@@ -389,7 +341,7 @@
         "vid = glob.glob('*.avi')[0]\n",
         "epts = calculate_epts(video=vid)\n"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +353,7 @@
         {
           "output_type": "stream",
           "text": [
-            "  6%|▌         | 34/600 [00:00<00:01, 333.68it/s]"
+            "\r  0%|          | 0/600 [00:00<?, ?it/s]"
           ],
           "name": "stderr"
         },
@@ -416,7 +368,7 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 600/600 [00:01<00:00, 346.45it/s]\n"
+            "100%|██████████| 600/600 [00:02<00:00, 264.89it/s]\n"
           ],
           "name": "stderr"
         },
