Add keyword argument for readability.

--- a/EPT_example.ipynb
+++ b/EPT_example.ipynb
@@ -314,10 +314,7 @@
         "epts = np.empty((blocksize, blocksize, 2, int(len(video)/2)+1))\n",
         "for i in range(blocksize):\n",
         "    for j in range(blocksize):\n",
-        "        epts[i,j,0,:], epts[i,j,1,:] = signal.welch(mpx[:,i,j], \n",
-        "                                                    video.fps, \n",
-        "                                                    scaling='spectrum', \n",
-        "                                                    nfft=len(mpx))"
+        "        epts[i,j,0,:], epts[i,j,1,:] = signal.welch(mpx[:,i,j], fs=video.fps, scaling='spectrum', nfft=len(mpx))"
       ],
       "execution_count": 33,
       "outputs": []
