--- a/EPT_example.ipynb
+++ b/EPT_example.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "## Energy proxy traits example\n",
         "\n",
-        "Here we present a simple example for computing energy proxy traits (EPTs) from bio-imaging footage of *Radix Balthica* embryos. Note that this example demonstrates the computation and visualisation of EPTs for a single timepoint in an embryos development, and thus does not include methods for the integration of responses from multiple individuals and/or treatment groups. For these methods, please see the following repository: https://github.com/otills/embryocv.\n",
+        "Here we present a simple example for computing energy proxy traits (EPTs) from bio-imaging footage of *Radix Balthica* embryos. Note that this example demonstrates the computation and visualisation of EPTs for a single timepoint in an embryos development, and thus does not include methods for the integration of responses from multiple individuals and/or treatment groups. There is also no pre-processing step involving the segmentation of the embryo from the image. For these methods, please see the following repository: https://github.com/otills/embryocv.\n",
         "\n",
         "\n"
       ]
