--- a/EPT_example.ipynb
+++ b/EPT_example.ipynb
@@ -202,7 +202,7 @@
         "    '''Crop an image according to the blocksize required for EPT calculation.'''\n",
         "    # Floor used so new image size is always below the original resolution\n",
         "    new_x, new_y = map(lambda v: math.floor(v/blocksize)*blocksize, frame.shape) \n",
-        "    return frame[:new_y, :new_x]"
+        "    return frame[:new_x, :new_y]"
       ],
       "execution_count": 7,
       "outputs": []
